fixes to z-index on screensaver

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -175,6 +175,6 @@ select {
 	}
 } */
 
-/* * {
+* {
 	cursor: none;
-} */
+}
